# waybar-crypto

./: config.ini  pyproject.toml  requirements.txt  waybar_crypto.py
