[project]
name = "waybar-crypto"
description = "A Waybar module for displaying cryptocurrency market information from CoinMarketCap."
authors = [{ name = "Ross", email = "git@ross.ch" }]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dependencies = ["requests"]
dynamic = ["version", "readme"]

[project.scripts]
waybar-crypto = "waybar_crypto:main"

[project.optional-dependencies]
dev = ["ruff", "bandit", "pre-commit>=3"]
tests = ["pytest>=8", "pytest-cov>=5"]

[tool.setuptools.dynamic]
version = { attr = "waybar_crypto.VERSION" }
readme = { file = ["README.md"] }

[tool.ruff]
line-length = 100

[tool.bandit]
exclude = ["test_*.py"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["Mart van de Ven <m@type.hk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "^2024.8.30"
charset-normalizer = "^3.3.2"
idna = "^3.8"
requests = "^2.32.3"
urllib3 = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
